# PictureToWood

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.MIT  README.md  main.cpp
docs/: index.html
documentation/website/: index.html
ext/: CMakeLists.txt
input/: config.json  layout.json  rectangle_3x_alternate.json  tri_square_alternate.json  triangle.json
input/Config/: config.json
input/Pattern/: rhombus_hex.json  tri_oct_alternate.json
libs/: CMakeLists.txt  Cell.cpp  Cell.hpp  Find_Patches.cpp  Find_Patches.hpp  Patch_List.cpp  Patch_List.hpp  Pattern.cpp  Pattern.hpp  Picture.cpp  Picture.hpp  Shape.cpp  Shape.hpp  Time_Measure.cpp  Time_Measure.hpp
