cmake_minimum_required(VERSION 3.19)
project(PictureToWood)

set(CMAKE_CXX_STANDARD 14)

set(EXECUTABLE_NAME PictureToWood)

set(SRC main.cpp)

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pthread")

FIND_PACKAGE(Boost REQUIRED COMPONENTS filesystem system)
FIND_PACKAGE(OpenCV REQUIRED)

INCLUDE_DIRECTORIES(
        ${PROJECT_SOURCE_DIR}
        ${CMAKE_CURRENT_SOURCE_DIR}
        ${Boost_INCLUDE_DIRS}
        ${OpenCV_INCLUDE_DIRS}
)

SET(LIBS
        myLib
        ${Boost_LIBRARIES}
        ${OpenCV_LIBS}
        )

ADD_EXECUTABLE(${EXECUTABLE_NAME} ${SRC})
TARGET_LINK_LIBRARIES(${EXECUTABLE_NAME} ${LIBS})

ADD_SUBDIRECTORY(libs)